tests/e2e/pass/m19_empty_str.ep
# EXIT: 0
fun main(): void {
    print("")
    os.ExitProcess(0)
}
