tests/e2e/fail/extern_return_bool.ep
# COMPILE_ERROR: extern 'BadExternBool' has unsupported ABI return type bool
extern "demo.dll" fun BadExternBool(): bool

fun main(): void {
}
